feat: add GitHub Actions deploy workflow and update docs
- Add .github/workflows/deploy.yml for Cloudflare Pages deployment
- Update INTEGRATION.md with GitHub Actions deployment instructions
- Update TODO.md with completed tasks
- Fix tentang.astro Alpine.js error
- Update .env.example with simplified R2 config

--- a/website/.env.example
+++ b/website/.env.example
@@ -6,15 +6,12 @@
 TURSO_DATABASE_URL=libsql://your-database.turso.io
 TURSO_AUTH_TOKEN=your-turso-auth-token
 
-# Cloudflare R2 (untuk caching stats)
-# Dapatkan dari: https://dash.cloudflare.com/ > R2
-# 1. Enable R2 di dashboard Cloudflare
-# 2. Create bucket baru (nama: buyback-cache)
-# 3. Generate R2 API token
-R2_ACCESS_KEY_ID=your-r2-access-key
-R2_SECRET_ACCESS_KEY=your-r2-secret-key
-R2_BUCKET_NAME=buyback-cache
-R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+# Cloudflare R2 Cache (Public Access)
+# Stats JSON akan tersedia di URL public R2
+# Pilih salah satu:
+# 1. Custom domain: https://cache.buyback.my.id/stats.json
+# 2. R2.dev subdomain: https://pub-[hash].r2.dev/stats.json
+PUBLIC_STATS_URL=https://cache.buyback.my.id/stats.json
 
 # Site Configuration
 PUBLIC_SITE_URL=https://buyback.my.id
