feat: Connect pages to Turso database
- Update leaderboard.astro to fetch influencers from database
- Update tracker/index.astro to fetch politicians with statement counts
- Update tracker/[slug].astro to fetch politician details and statements
- Fix db/index.ts to use import.meta.env for Cloudflare compatibility
- Add vite.define in astro.config.mjs to inject env vars at build time
- Add seed.ts script for initial database seeding

--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,8 @@
     "astro": "astro",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "npx tsx src/db/seed.ts"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.0.0",
@@ -24,7 +25,9 @@
   },
   "devDependencies": {
     "@types/alpinejs": "^3.13.0",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.30.0",
+    "tsx": "^4.21.0",
     "wrangler": "^3.100.0"
   },
   "packageManager": "pnpm@9.15.2+sha256.022309bb31359142b65bfa889e0406d2eebd5acfffca47e6944acf29d9d6a66b"
