feat: Add manual trigger deployment via GitHub Actions
- Update deploy.yml with workflow_dispatch for manual trigger only
- Add separate jobs for website and worker deployment
- Add worker .gitignore and pnpm-lock.yaml
- Update DEVELOPMENT.md with manual deployment instructions
- Remove auto-deploy on push to main

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,22 @@
-name: Deploy to Cloudflare Pages
+name: Deploy to Cloudflare
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'website/**'
-      - '.github/workflows/deploy.yml'
   workflow_dispatch:
+    inputs:
+      deploy_website:
+        description: 'Deploy Website to Cloudflare Pages'
+        type: boolean
+        default: true
+      deploy_workers:
+        description: 'Deploy Workers to Cloudflare'
+        type: boolean
+        default: false
 
 jobs:
-  deploy:
+  deploy-website:
+    if: ${{ github.event.inputs.deploy_website == 'true' }}
     runs-on: ubuntu-latest
-    name: Deploy
+    name: Deploy Website
     
     steps:
       - name: Checkout
@@ -48,3 +52,42 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy website/dist --project-name=buyback
+
+  deploy-stats-worker:
+    if: ${{ github.event.inputs.deploy_workers == 'true' }}
+    runs-on: ubuntu-latest
+    name: Deploy Stats Cron Worker
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+          cache-dependency-path: workers/stats-cron/pnpm-lock.yaml
+
+      - name: Install dependencies
+        working-directory: workers/stats-cron
+        run: pnpm install
+
+      - name: Deploy Worker
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          workingDirectory: workers/stats-cron
+          command: deploy
+          secrets: |
+            TURSO_DATABASE_URL
+            TURSO_AUTH_TOKEN
+        env:
+          TURSO_DATABASE_URL: ${{ secrets.TURSO_DATABASE_URL }}
+          TURSO_AUTH_TOKEN: ${{ secrets.TURSO_AUTH_TOKEN }}
