--- a/workers/stats-cron/package.json
+++ b/workers/stats-cron/package.json
@@ -13,5 +13,6 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0"
-  }
+  },
+  "packageManager": "pnpm@9.15.2+sha256.022309bb31359142b65bfa889e0406d2eebd5acfffca47e6944acf29d9d6a66b"
 }
