--- a/website/package.json
+++ b/website/package.json
@@ -16,11 +16,13 @@
     "@astrojs/cloudflare": "^12.0.0",
     "@astrojs/tailwind": "^6.0.0",
     "@libsql/client": "^0.14.0",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
     "alpinejs": "^3.14.0",
     "astro": "^5.17.1",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.5.1",
     "drizzle-orm": "^0.38.0",
-    "lucia": "^3.2.0",
+    "lucia": "^3.2.2",
+    "oslo": "^1.2.1",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
